# llm-bias-sentinel

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bias-evaluation.yml  ci.yml
api/: Dockerfile  __init__.py  main.py  schemas.py
compliance/: __init__.py  eu_ai_act_compliance.md  fairness_card.py  fairness_card_llama3-8b.json  fairness_card_llama3-8b.md  fairness_card_mistral-7b.json  fairness_card_mistral-7b.md  report_templates.py
config/: benchmarks.yaml  models.yaml  thresholds.yaml
guardrails/: config.yml
guardrails/actions/: bias_actions.py
guardrails/prompts/: bias_check.prompts
guardrails/rails/: bias_rails.co
monitoring/grafana/dashboards/: bias_sentinel.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 01_benchmark_exploration.ipynb  02_model_comparison.ipynb  colab_setup.ipynb
reports/: model_comparison_matrix.csv
reports/benchmark_results/: all_results.json  sample_results.json
reports/final/: compliance_report_llama3-8b.md  executive_summary_llama3-8b.md  fairness_card_llama3-8b.json  fairness_card_llama3-8b.md  technical_report_llama3-8b.md
reports/red_team/: red_team_report_2026-03-23T09-40-01-426509.json  red_team_report_2026-03-23T09-54-02-918610.json  red_team_report_2026-03-23T12-51-53-502065.json  red_team_report_2026-03-23T13-03-40-843439.json  red_team_report_2026-03-23T13-04-37-803218.json  red_team_report_2026-03-23T13-06-15-361028.json
src/: __init__.py  config.py
src/benchmarks/: __init__.py  bbq_evaluator.py  benchmark_runner.py  bold_evaluator.py  crows_pairs_evaluator.py  deepeval_bias_runner.py  sentiment_disparity.py  stereoset_evaluator.py  toxicity_evaluator.py
src/finetuning/: __init__.py  bias_dataset_builder.py  lora_trainer.py
src/guardrails_app/: __init__.py  guardrails_engine.py  guardrails_tester.py  mitigation.py
src/image_bias/: __init__.py  image_bias_detector.py
src/models/: model_loader.py  model_registry.py
src/monitoring/: __init__.py  bias_monitor.py  evidently_reports.py
src/rag_bias/: __init__.py  rag_bias_tester.py
src/red_team/: __init__.py  adversarial_generator.py  attack_taxonomy.py  bias_elicitation.py  jailbreak_tester.py  red_team_orchestrator.py  report_generator.py
src/utils/: prompt_templates.py  visualization.py
tests/: conftest.py  test_api.py  test_attack_taxonomy.py  test_config.py  test_finetuning.py  test_mitigation.py  test_monitoring.py  test_prompt_templates.py  test_rag_bias.py
