[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-bias-sentinel"
version = "1.0.0"
description = "Comprehensive LLM bias evaluation, red-teaming, and guardrails framework. 100% local inference via Ollama."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LLM Bias Sentinel Contributors"},
]
keywords = ["llm", "bias", "fairness", "evaluation", "red-teaming", "guardrails", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "datasets>=3.0",
    "deepeval>=2.0",
    "textblob>=0.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "fastapi>=0.135",
    "uvicorn>=0.30",
    "pydantic>=2.9",
    "httpx>=0.27",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
image = [
    "diffusers>=0.31",
    "transformers>=4.48",
    "torch>=2.4",
    "Pillow>=10.0",
]
monitoring = [
    "evidently>=0.7",
    "streamlit>=1.38",
]
guardrails = [
    "nemoguardrails>=0.20",
]
finetune = [
    "transformers>=4.48",
    "peft>=0.12",
    "trl>=0.11",
    "bitsandbytes>=0.43",
    "accelerate>=0.33",
    "torch>=2.4",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.5",
    "black>=24.0",
    "bandit>=1.7",
    "mypy>=1.10",
]
all = [
    "llm-bias-sentinel[image,monitoring,guardrails,finetune,rag,dev]",
]

[project.scripts]
bias-sentinel = "run:main"

[project.urls]
Homepage = "https://github.com/yourusername/llm-bias-sentinel"
Documentation = "https://github.com/yourusername/llm-bias-sentinel#readme"
Issues = "https://github.com/yourusername/llm-bias-sentinel/issues"

[tool.setuptools.packages.find]
include = ["src*", "api*", "compliance*", "guardrails*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
